--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -3,6 +3,10 @@
   font-family: "Hammersmith One", sans-serif;
 }
 
+#warning-container {
+  width: 90% !important;
+}
+
 body {
   height: 100%;
   background-color: var(--background-color);
@@ -23,5 +27,5 @@ body {
 
 .dark-mode {
   --background-color: rgb(0, 17, 17);
-  --text-color: #C0CBC6;
+  --text-color: #c0cbc6;
 }
